# ManthaAI

./: pyproject.toml
back/: main.py
front/: package-lock.json  package.json
front/public/: global.css  index.html
front/src/: App.svelte
front/src/component/: desk.svelte  head.svelte  main.svelte  responseConfiguration.svelte  result.svelte  template.svelte
front/src/data/: stores.js
